# userlist-operator-multi-agent-on-lambda

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.x86_64  LICENSE  flake.nix  pyproject.toml
.github/workflows/: container.yml  deploy.yml
infra/: README.md  main.tf  outputs.tf  variables.tf  versions.tf
infra/modules/userlist_operator/: iam.tf  main.tf  outputs.tf  variables.tf
lib/action_groups/user_data_fetch/: Dockerfile  README.md  openapi.json
lib/action_groups/user_data_fetch/app/: __init__.py  handler.py  schemas.py  tools.py
lib/action_groups/user_data_fetch/scripts/: generate_schema.py
lib/action_groups/user_filter/: Dockerfile  README.md  openapi.json
lib/action_groups/user_filter/app/: app.py  exceptions.py  handler.py  schemas.py  tools.py  types.py
lib/action_groups/user_filter/tests/: test_tools.py
scripts/: gen_openapi_schema.py
src/agents/orchestrator/: __init__.py  __main__.py  agent.py  config.py  tools.py
src/agents/user_filter/: __init__.py  __main__.py  agent.py  config.py  tools.py
src/agents/user_provider/: __init__.py  __main__.py  agent.py  config.py  tools.py
src/core/: agent_model.py  config.py  logger.py
src/lambdas/userlist_operator/: app.py  config.py
src/schemas/: __init__.py  analytics.py  user.py
