[project]
name = "userlist-operator-multi-agent-on-lambda"
version = "0.1.0"
description = "Simple multi-agent (orchestrator + sub-agents) user list management and processing."
readme = "README.md"
authors = [
    { name = "Kiril Strezikozin", email = "kirilstrezikozin@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "aws-lambda-powertools[all]>=3.22.0",
    "pydantic>=2.12.3",
]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
